# tomoru-test

./: .env.example  .gitignore  Cargo.toml  LICENSE  Readme.md
.github/workflows/: rust.yml
src/: logger.rs  main.rs
