[package]
name = "tomoru-test"
version = "1.0.0"
edition = "2021"
description = "simple example with ip hit counter"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
repository = "https://github.com/TOwInOK/tomoru-test?tab=readme-ov-file"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
tokio = { version = "1.43.0", features = [
    "parking_lot",
    "rt-multi-thread",
    "signal",
] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
